Finish Kaggle part report (description in the notebook)

--- a/DM2020-Lab2-Homework.ipynb
+++ b/DM2020-Lab2-Homework.ipynb
@@ -3453,6 +3453,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing\n",
+    "First, load the tweets (tweets_DM.json), pick out the data we need (tweet_id and text), then store them in a DataFrame. We can take a look at the generated DataFrame and discover that we have 1867535 tweets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -3586,6 +3594,13 @@
    ],
    "source": [
     "tweets_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Second, load emotion.csv and data_identification.csv and store them in a DataFrame, too."
    ]
   },
   {
@@ -3816,6 +3831,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we split the train and test dataset and store them in two DataFrame respectively."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -4040,6 +4062,13 @@
     "test_df = train_test[train_test['identification'] == 'test'].reset_index(drop=True)\n",
     "train_df\n",
     "test_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After we load all the needed data into DataFrames, we can merge them together on tweet_id."
    ]
   },
   {
@@ -4623,7 +4652,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Naive Bayes"
+    "---\n",
+    "### Feature Engineering & Models\n",
+    "After preprocessing the raw data, we can use some word vectorizer to extract/discover features from the dataset.\n",
+    "In the following part, I tried four different combinations of word vectorizer and models.\n",
+    "- TFIDF (1000 features) + Naive Bayes model\n",
+    "- Bag of Words (500 features) + Decision Tree model\n",
+    "- Bag of Words (500 features) + Deep Learning model\n",
+    "- TFIDF (1000 features) + Deep Learning model\n",
+    "---\n",
+    "The following four parts shares the same logic. \n",
+    "- First, initiate the word vectorizer and try to learn some features. \n",
+    "- Second, feed the features into the selected models, provide the training data (tweets and target emotion) and start training. \n",
+    "- Then, calculate the training accuracy and loss to briefly understand the performance of this combination. \n",
+    "- Last, predict the test data with the model just trained and save the results to a well-formatted csv file for submission."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### TFIDF_1000 + Naive Bayes model"
    ]
   },
   {
@@ -4798,7 +4848,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decision Tree Model"
+    "---\n",
+    "### BOW_500 + Decision Tree Model"
    ]
   },
   {
@@ -4831,11 +4882,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "BOW_500 = CountVectorizer(max_features=500, tokenizer=nltk.word_tokenize) \n",
-    "BOW_500.fit(train_df['text'])\n",
-    "\n",
-    "#train_data_BOW_features_500 = BOW_500.transform(train_df['text'])\n",
-    "\n",
-    "#train_data_BOW_features_500.shape"
+    "BOW_500.fit(train_df['text'])"
    ]
   },
   {
@@ -4960,7 +5007,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deep Learning"
+    "---\n",
+    "### BOW_500 + Deep Learning model"
    ]
   },
   {
@@ -5321,7 +5369,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deep Learning + TFIDF_1000"
+    "---\n",
+    "### TFIDF_1000 + Deep Learning model"
    ]
   },
   {
@@ -5669,6 +5718,29 @@
    "outputs": [],
    "source": [
     "submit_df_DLTFIDF.to_csv('submission_DLTFIDF.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussion\n",
+    "The screenshot below shows the performance of the four combinations above. \n",
+    "- First submission: TFIDF_1000 + Naive Bayes model.\n",
+    "- Second submission: BOW_500 + Decision Tree model.\n",
+    "- Third submission: BOW_500 + Deep Learning model.\n",
+    "- Fourth submission: TFIDF_1000 + Deep Learning model.\n",
+    "\n",
+    "<img src=\"img/pic1.png\"/>\n",
+    "\n",
+    "The results show that Deep Learing model performs slightly better than the Naive Bayes and Decision Tree model. If there's more time, I'll probably try to modify the Deep Learning models and finetune them to see if the results would be better."
    ]
   },
   {
